<resources>
    <string name="app_name">Aplicacion38</string>
    <string name="lista_vacia">Sin Datos</string>
    <string name="label_nombre_hipoteca">Nombre:</string>
    <string name="label_condiciones">Condiciones:</string>
    <string name="label_contacto">Contacto</string>
    <string name="label_telefono">Telefono:</string>
    <string name="label_email">E-Mail:</string>
    <string name="label_observaciones">Observaciones</string>
</resources>