<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="matope.simarro.aplicacion38.GestionHipotecasActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/label_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_nombre_hipoteca"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_nombre"
            android:layout_alignParentLeft="true"
            android:ems="10" />

        <TextView
            android:id="@+id/label_condiciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nombre"


            android:layout_marginTop="20dp"
            android:text="@string/label_condiciones"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/condiciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_condiciones"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="textMultiLine"></EditText>

        <TextView
            android:id="@+id/label_contacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/condiciones"
            android:layout_marginTop="20dp"
            android:text="@string/label_contacto"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_contacto"
            android:layout_alignParentLeft="true"
            android:ems="10"></EditText>

        <TextView
            android:id="@+id/label_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contacto"
            android:layout_marginTop="20dp"
            android:text="@string/label_telefono"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_telefono"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="phone"></EditText>

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"


            android:layout_height="wrap_content"
            android:layout_below="@+id/telefono"
            android:layout_marginTop="20dp"
            android:text="@string/label_email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_email"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/label_observaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginTop="20dp"
            android:text="@string/label_observaciones"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/observaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_observaciones"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:inputType="textMultiLine"></EditText>
    </RelativeLayout>
</ScrollView>